# audio

./: README.md
audio/app/: CMakeLists.txt  build.gradle
audio/app/src/androidTest/java/com/a78/audio/: ExampleInstrumentedTest.java
audio/app/src/main/: AndroidManifest.xml
audio/app/src/main/cpp/: native-lib.cpp
audio/app/src/main/cpp/audiograph/: smbPitchShift.cpp
audio/app/src/main/cpp/fmod/: voice_changer.cpp
audio/app/src/main/java/com/a78/audio/: MainActivity.java  MainApplication.java
audio/app/src/main/java/com/a78/audio/activity/: BasePlayActivity.java  RecordPlayActivity.java  VoiceChangeActivity.java  VoiceSpeedActivity.java
audio/app/src/main/java/com/a78/audio/activity/base/: HighRecordPlayController.java  LowRecordPlayController.java  RecordPlayController.java  ShiftRecordPlayController.java
audio/app/src/main/java/com/a78/audio/jni/: AudioGraphJni.java  VoiceChangeJni.java
audio/app/src/main/java/com/a78/audio/util/: FileUtils.java
audio/app/src/main/res/layout/: activity_base_play.xml  activity_main.xml  activity_record_play.xml  activity_voice_change.xml  activity_voice_speed.xml
audio/app/src/test/java/com/a78/audio/: ExampleUnitTest.java
audio/gradle/wrapper/: gradle-wrapper.properties
